--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cordova-sqlite-storage": "6.0.0",
     "cordova.plugins.diagnostic": "6.0.3",
     "crypto-js": "^4.1.1",
+    "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
