--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/diagnostic": "^5.36.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/http": "^5.36.0",
+    "@ionic-native/keyboard": "^5.36.0",
     "@ionic-native/launch-review": "^5.36.0",
     "@ionic-native/location-accuracy": "^5.36.0",
     "@ionic-native/network": "^5.36.0",
