--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.1.1",
     "@ionic-native/android-permissions": "^5.36.0",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/date-picker": "^5.36.0",
     "@ionic-native/diagnostic": "^5.36.0",
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/http": "^5.36.0",
@@ -37,6 +38,7 @@
     "cordova-plugin-android-permissions": "1.1.2",
     "cordova-plugin-androidx": "3.0.0",
     "cordova-plugin-androidx-adapter": "1.1.3",
+    "cordova-plugin-datepicker": "0.9.3",
     "cordova-plugin-file": "6.0.2",
     "cordova-plugin-geolocation": "4.1.0",
     "cordova-plugin-network-information": "3.0.0",
@@ -112,7 +114,8 @@
         "ANDROIDX_VERSION": "1.+"
       },
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-datepicker": {}
     },
     "platforms": [
       "android"
