--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ionic/angular": "^5.5.2",
     "@ionic/pro": "2.0.4",
     "cordova-android": "8.1.0",
+    "cordova-android-support-gradle-release": "3.0.1",
     "cordova-launch-review": "4.0.1",
     "cordova-plugin-advanced-http": "3.2.0",
     "cordova-plugin-android-permissions": "1.1.2",
@@ -115,7 +116,10 @@
       },
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
